--- a/gb/22/11/25/n13872950.md
+++ b/gb/22/11/25/n13872950.md
@@ -88,36 +88,36 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/22/n13830243.md#1">戒掉手上的烟 让家人笑得更甜</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/22/n13830378.md#1">11种保健法提升免疫力 有效防治乳腺癌</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/24/n13831908.md#1">这种油人们天天吃 却增加癌症、心脏病风险</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/2/n13941549.md#1">在人休息时，癌症醒来和扩散</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/26/n13958637.md#1">癌症治疗中的3种补充和替代医学疗法</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/21/n10992365.md#1" target="_blank">殷毅：我在右派专列上</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/1/n10946163.md#1" target="_blank">新加坡法轮功学员修炼故事 真善忍改变人心</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/1/n9793368.md#1" target="_blank">你不了解的邓小平：与毛一同指挥大跃进（上）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/2/11/n4637812.md#1" target="_blank">修炼法轮功 母亲摆脱严重糖尿病重获新生</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/4/n13942716.md#1">【未解之谜】从破案到预言 为什么梦如此神奇？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13944080.md#1">一代圣主康熙皇帝至孝之至 数十年如一日</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945330.md#1">【未解之谜】罕见天象昭示红朝命数？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/5/22/n13743021.md#1">大劫前冥府造册 是否真的在劫难逃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/20/n13933872.md#1">诗：聆听创世主的雷音 ⑴⑵</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/9/n13946744.md#1">【全球新闻】启动春季攻势 俄军轰炸乌克兰全境</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/9/n13946409.md#1">【有冇搞错】格局决定上限 中央计划不出科技进步</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/9/n13946894.md#1">【环球直击】李卓人狱中受伤 妻子回港探望被捕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/7/n13945149.md#1">习花大力气提拔李强 专家：李能做的事情有限</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945430.md#1">中共设中央科委重整科技部 专家：绝对坏做法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945529.md#1">大陆人就业遇寒冬 广东出口名镇也萧条</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/9/n13946022.md#1">疑违反奥斯卡规定 杨紫琼急删争议帖文</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/7/n13945104.md#1">两巨星隔空联动 周星驰喊话周杰伦“香港见”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/7/n13945246.md#1">包包吊着苹果挂饰 杨幂命名“包蘋安”引热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945948.md#1">刘德华被《流水落花》换角 郑秀文曝背后原因</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945930.md#1">依然怀念演员生活 黎姿首曝15年前息影原因</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/4/n13943029.md#1">高度加工食物成瘾罹癌更致命 专家：3个方法戒断</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/13/n13928982.md#1">抗癌延寿作用强大 石榴这样吃最有效</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13943990.md#1">自然疗愈！照着步骤做 有望改善身体健康</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/7/n13944906.md#1">典型毒亲事例之一：令孩子感到恐惧的虐待</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945826.md#1">补充蛋白质 11种常见食物价格亲民又实惠</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963438.md#1">【时事人物】从任性少年到ChatGPT新乌托邦教主</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964335.md#1">【全球新闻】马英九称两岸都是中华民国 遭中共封杀</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963293.md#1">【拍案惊奇】蔡奇要官员向习公布财产防外逃？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963385.md#1">【财商天下】银行危机暂解 美联储还会加息？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963229.md#1">大陆直播主街头采访“你会上前线吗”舆论翻车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962292.md#1">海南变香港？专家：党比法大 难造自由港</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962933.md#1">分析：养儿防老被中共破坏 老人何去何从</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962773.md#1">分享冻龄秘笈遭酸民攻击 伊能静高EQ回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963429.md#1">9岁时曾遭绑架 张艾嘉儿子首次吐露心声</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962676.md#1">《镜之孤城》影评：奇幻经历 成走出霸凌阴霾契机</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962591.md#1">常服安眠药痴呆风险增8成  专家荐“神奇助眠剂”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962594.md#1">这几种食物加辣酱 味道超乎想像</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/11/25/n13872950.htm">50%癌症其实可预防？ 远离这些致癌物保健康</a></p><hr>
