--- a/gb/23/1/17/n13909008.md
+++ b/gb/23/1/17/n13909008.md
@@ -33,31 +33,31 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/6/n10894661.md#1" target="_blank">林傲霜：为了活命的冒险——瞒产私分</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/26/n11411173.md#1" target="_blank">美国会点名要求中共释放左洪涛 纽约声援</a></li>
+<li><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/5/n11431635.md#1" target="_blank">共产暴政录：盛世才与新疆的几个待解问题</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/21/n11602447.md#1" target="_blank">他们为我们的生活带来光明（4）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906403.md#1">因手术并发症濒死 男童一窥下辈子转生安排</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/14/n13906615.md#1">【未解之谜】西方极乐世界游记（上）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/6/n13901111.md#1">【百年真相】以“亿元”计 中共十大贪官排行榜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/14/n13906972.md#1">【时事人物】梅西：三代女人造就的一代球王</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/4/n13898887.md#1">乱世一书生 怎能拥有安定一城的能量？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/16/n13908322.md#1">【中国禁闻】中共警察密集死亡 大陆民众展开自救</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/16/n13908608.md#1">【菁英论坛】二次感染更重 中共赌命 能染尽染</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/16/n13908660.md#1">【神韵早期节目】草船借箭（2015年制作）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/14/n13907104.md#1">恒星被黑洞吞噬最后时刻 NASA公布震撼视频</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/15/n13907245.md#1">【翻墙必看】内部不稳 中共军委未发1号军令</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/15/n13907481.md#1">习对重庆杭州抗议示弱 分析：今年中共或垮台</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/15/n13907796.md#1">谢莉斯去世细节曝光：因染疫入住呼吸科</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/15/n13907833.md#1">周星驰在IG请粉丝许愿 一众艺人挤爆留言</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/16/n13908700.md#1">移民风波后首现身 冯小刚白癜风越来越严重</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/15/n13907865.md#1">陈奕迅红馆终场演唱比爱心 18岁女儿感动洒泪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/14/n13906991.md#1">2022美CD销量TOP10 TWICE唯一上榜韩女团</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/6/n13900788.md#1">一天睡满8小时？最佳睡眠时间其实因人而异</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/14/n13906901.md#1">铝是神经毒素 危害大脑 如何防铝中毒</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/16/n13908155.md#1">有买房需求 一种方式立马降低利率！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/15/n13907390.md#1">为何头发湿湿的不应该上床睡觉？ 专家释疑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/16/n13907983.md#1">【美食天堂】清蒸鱼做法～超级滑嫩无腥味</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963438.md#1">【时事人物】从任性少年到ChatGPT新乌托邦教主</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964335.md#1">【全球新闻】马英九称两岸都是中华民国 遭中共封杀</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963293.md#1">【拍案惊奇】蔡奇要官员向习公布财产防外逃？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963385.md#1">【财商天下】银行危机暂解 美联储还会加息？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963229.md#1">大陆直播主街头采访“你会上前线吗”舆论翻车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962292.md#1">海南变香港？专家：党比法大 难造自由港</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962933.md#1">分析：养儿防老被中共破坏 老人何去何从</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962773.md#1">分享冻龄秘笈遭酸民攻击 伊能静高EQ回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963429.md#1">9岁时曾遭绑架 张艾嘉儿子首次吐露心声</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962676.md#1">《镜之孤城》影评：奇幻经历 成走出霸凌阴霾契机</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962591.md#1">常服安眠药痴呆风险增8成  专家荐“神奇助眠剂”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962594.md#1">这几种食物加辣酱 味道超乎想像</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/1/17/n13909008.htm">星战外传《曼达洛人3》 安纳金·天行者将回归</a></p><hr>
