--- a/gb/22/11/17/n13868061.md
+++ b/gb/22/11/17/n13868061.md
@@ -24,31 +24,31 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/29/n9782273.md#1" target="_blank">高天韵：锡盖特博物馆 唤醒罗马尼亚的记忆</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/6/n11369063.md#1" target="_blank">踏上自由土地 独立日游行 望迫害结束</a></li>
+<li><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/17/n10310732.md#1" target="_blank">共产暴政录：台湾土改与大陆土改的对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/16/n11726202.md#1" target="_blank">心灵升华 屏东法轮功学员见证大法美好</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/11/n13927607.md#1">天的谴告 人的机会</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/9/n13798623.md#1">时空可压缩？奇异的梦中之梦</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/3/n13921611.md#1">红楼欲坠话红楼：曹雪芹与法国现代作家普鲁斯特 思想意识“惊人相似”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/22/n13935048.md#1">【未解之谜】来自星星的孩子（3）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/15/n13930206.md#1">来自《唐阵》的感动</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13938245.md#1">【舞蹈三剑客】有史以来第一次！神韵首次抵达多明尼加演出</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13937734.md#1">【车评】媲美全尺寸SUV的中型SUV 2023 Hyundai Palisade XRT</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13937718.md#1">【未解之谜】植物口香糖？恶魔之果？槟榔的秘密</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/24/n13937294.md#1">“一孩难求” 中国迎来首轮幼儿园关停潮</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936809.md#1">北京批准中企援俄？布林肯：几乎确定</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/24/n13937215.md#1">爆发聚集性疫情 中国多地学校停课</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13937673.md#1">香港名媛蔡天凤遭杀害分尸 3名涉案嫌犯被捕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936794.md#1">歌手李玟透露“一辈子最大恐惧” 自曝身体缺陷</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936731.md#1">杜琪峯因电影言论遭封杀 黄明志为前辈抱不平</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/24/n13937630.md#1">打破香港影史纪录 《毒舌大状》本土票房破亿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/24/n13937577.md#1">柏林影展走红毯 范冰冰：5年没拍戏挺残酷</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/3/n13921769.md#1">霹雳果的7大健康益处</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/15/n13930478.md#1">吃马铃薯会得糖尿病？研究这样说</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936555.md#1">晚上睡不着怎么办？心理师推荐改善方法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/16/n13930856.md#1">血液循环好 子宫也会很健康 改善血瘀这样吃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13937718.md#1">【未解之谜】植物口香糖？恶魔之果？槟榔的秘密</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963438.md#1">【时事人物】从任性少年到ChatGPT新乌托邦教主</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964335.md#1">【全球新闻】马英九称两岸都是中华民国 遭中共封杀</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963293.md#1">【拍案惊奇】蔡奇要官员向习公布财产防外逃？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963385.md#1">【财商天下】银行危机暂解 美联储还会加息？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963229.md#1">大陆直播主街头采访“你会上前线吗”舆论翻车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962292.md#1">海南变香港？专家：党比法大 难造自由港</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962933.md#1">分析：养儿防老被中共破坏 老人何去何从</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962773.md#1">分享冻龄秘笈遭酸民攻击 伊能静高EQ回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963429.md#1">9岁时曾遭绑架 张艾嘉儿子首次吐露心声</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962676.md#1">《镜之孤城》影评：奇幻经历 成走出霸凌阴霾契机</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962591.md#1">常服安眠药痴呆风险增8成  专家荐“神奇助眠剂”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962594.md#1">这几种食物加辣酱 味道超乎想像</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/11/17/n13868061.htm">痛别艾成3个月 王瞳悼亡夫：我依然努力着</a></p><hr>
